<resources>
    <string name="app_name">Do Dates</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="class_list">Class List</string>
    <string name="class_">Class</string>
    <string name="fixme">FIXME</string>
    <string name="view_class_list">View Class List</string>
    <string name="view_calendar">View Calendar</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="class_name">Class Name</string>
    <string name="select_color">Select Color</string>
    <string name="edit">Edit</string>
    <string name="assignment_list">Assignments</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="due_date">Due Date</string>
    <string name="do_date">Do Date</string>
    <string name="touch_to_select_date">Touch to Select Date</string>
    <string name="add_class">Add Class</string>
    <string name="class_assignments">Class Assignments</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="edit_class_info">Edit Class Info</string>
    <string name="update">Update</string>
    <string name="delete_class">Delete Class</string>
    <string name="delete_assignment">Delete Assignment</string>
</resources>
