<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ntheurer.dodatesapp.ui.AddAssignmentActivity"
    android:paddingBottom="50dp"
    android:paddingTop="50dp"
    android:layout_margin="10dp">



    <TextView
        android:id="@+id/assignment_name_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/assignment_name_edit"
        android:inputType="text"
        android:hint="@string/assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/assignment_name_category"
        android:layout_toEndOf="@id/assignment_name_category"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />



    <TextView
        android:id="@+id/assignment_due_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:layout_below="@id/assignment_name_category"
        android:layout_centerHorizontal="@id/assignment_due_category"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_view_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_to_select_date"
        android:background="@drawable/border"
        android:layout_toRightOf="@id/assignment_due_category"
        android:layout_toEndOf="@id/assignment_due_category"
        android:layout_below="@id/assignment_name_edit"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"/>



    <TextView
        android:id="@+id/assignment_do_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_date"
        android:layout_below="@id/assignment_due_category"
        android:layout_centerHorizontal="@id/assignment_do_category"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_view_do_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_to_select_date"
        android:background="@drawable/border"
        android:layout_toRightOf="@id/assignment_do_category"
        android:layout_toEndOf="@id/assignment_do_category"
        android:layout_below="@id/text_view_due_date"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/create_assignment_button"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_assignment_button"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/create_assignment_button"
            android:layout_toEndOf="@id/create_assignment_button"/>

    </RelativeLayout>


</RelativeLayout>
