<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ntheurer.dodatesapp.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/username_field"
                android:id="@+id/usernameTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <EditText
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/password_field"
                android:id="@+id/passwordTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <EditText
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:id="@+id/registerButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:id="@+id/loginButton"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
